change todo and html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
       <label>
         <input type="text" id="inputText" />
         <button type="submit" id="btnSubmit"><strong>+</strong></button>
+        <button type="submit" id="btnClearAll"><strong>Clear</strong></button>
+<!-- Триггер/Открыть модальный -->
+<button type="submit" id="btnEdit">Edit</button>
+
+<!-- Модальный -->
+<div class="myModal">
+
+  <!-- Модальное содержание -->
+  <div>
+    <span id="btnClose">Close</span>
+    <p>This is a modal window</p>
+  </div>
+
+</div>
+
       </label>
     </form>
 
