--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 
       <button type="submit" class="btnExit">Х</button>
     </div>
-    <script src="todoNew.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
